# mint-burn-token

./: cabal.project  mint-burn-token.cabal
src/: Token.hs  Token01.hs
